# fl-2024-Filatova-Rimma

./: README.md
prac/: CMakeLists.txt  INFORMATION.md  README.md
prac/example/: CMakeLists.txt  main.cpp
prac/include/: prac1.h
prac/src/: prac1.cpp  tests.cpp
